# galax_navigation

./: CMakeLists.txt  README.md  package.xml
agent/: td3_actor.onnx  td3_actor_1.onnx  td3_actor_2.onnx
config/: dwa_parameters.yaml  mapper_params_online_async.yaml  nav2_params.yaml  trimmed_nav2_params.yaml
galax_navigation/: TD3_class.py
include/galax_navigation/: DWA_class.hpp  DWA_params_class.hpp  TD3_class.hpp  observations_class.hpp  observations_server_class.hpp
launch/: DWA_navigation_real.launch.py  DWA_navigation_sim.launch.py  launch_navigation.launch.py  launch_navigation_sim.launch.py  localization_launch.py  localization_sim.launch.py  navigation.launch.py  navigation_launch.py  odom_localization_sim.launch.py  online_async_mapper_launch.py  online_sim_async_mapper_launch.py  online_sync_mapper_launch.py
map/: corridor_map.pgm  corridor_map.yaml  corridor_map2.pgm  corridor_map2.yaml  empty_corridor_map.pgm  empty_corridor_map.yaml  my_map.pgm  my_map.yaml  my_map2.pgm  my_map2.yaml  my_map3.pgm  my_map3.yaml  my_map4.pgm  test_map.yaml  uni_map2.pgm  uni_map2.yaml  uni_map3.pgm  uni_map4.pgm  uni_map4.psd  uni_map4.yaml  uni_map5.pgm  uni_map5.yaml
rviz/: DWA_navigation.rviz  DWA_navigation_2.rviz  nav2_default_view.rviz  navigation.rviz  navigation_sim.rviz  sim_mapping.rviz  view_mapping_sim.rviz
scripts/: TD3_node.py  initial_pose_publisher.py  path_plotter.py
src/: DWA_class.cpp  DWA_node.cpp  observations_server_class.cpp  observations_server_node.cpp
